--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ main {
 }
 
 footer {
-    height: 10vh;
+    height: 20vh;
 }
 
 #iconos {
@@ -69,4 +69,16 @@ td {
         background-color: transparent;
         color: white;
      }
+}
+
+@media only screen and (max-width: 1366px){
+    .buscar {
+       width: 50vw;
+    }
+}
+
+@media only screen and (max-width: 417px){
+    .cajas div {
+        width: 40vw;
+    }
 }
